<resources>
    <string name="app_name">SQlite</string>
    <string name="name">Name</string>
    <string name="phoneno">Phoneno</string>
    <string name="login">LogIn</string>
    <string name="e_mail">E-Mail</string>
    <string name="registration">Registration</string>
    <string name="password">Password</string>
    <string name="login2">LogIn</string>
    <string name="reset">Reset</string>
    <string name="show_detailes">Show Detailes</string>
    <string name="edit_detailes">Edit Detailes</string>
    <string name="textview">TextView</string>
    <string name="update">Update</string>
    <string name="log_in">log_in</string>
    <string name="email">email</string>
    <string name="register">register</string>
    <string name="show_detail">show_detail</string>
    <string name="log_in">log_in</string>
    <string name="enter_password">enter_password</string>
    <string name="enter_mail">enter_mail</string>
    <string name="enter_your_password">enter_your_password</string>
    <string name="sign_up_form">sign_up_form</string>
    <string name="email">email</string>
    <string name="enter_your_mail">enter_your_mail</string>
    <string name="phone_no">phone_no</string>
    <string name="enter_phone_no">enter_phone_no</string>
    <string name="submit_and_save">submit_and_save</string>
    <string name="state">state</string>
    <string name="type">type</string>
    <string name="enter_student">enter_student</string>
    <string name="edit_detail">edit_detail</string>
    <string name="hii">hii</string>
    <string name="bye">/bye</string>
    <string name="hlo">hlo</string>
    <string name="show_detail">show_detail</string>
    <string name="student">student</string>
    <string name="update_password">update_password</string>
    <string name="delete_data">delete_data</string>
    <string name="delete">delete</string>
</resources>
