<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main4Activity">

        <LinearLayout
            android:layout_width="368dp"
            android:layout_height="495dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/show_detail"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/hlo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/hlo"
                android:textAlignment="center"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/bye"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bye"
                android:textAlignment="center"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/hii"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hii"
                android:textAlignment="center"
                android:textSize="25sp" />

            <Button
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="50dp"
                android:text="@string/edit_detail"
                android:textSize="25sp" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

